--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.9",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9",
+        "mpdf/mpdf": "*",
         "propaganistas/laravel-phone": "^5.3"
     },
     "require-dev": {
