--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           server: node22-ca.n0c.com
           username: cvmaker@senousolutions.com
-          password: @Achille12062004
+          password: Achille12062004@
