--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,18 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
 
     RewriteEngine On
 
     # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
+    # RewriteCond %{HTTP:Authorization} .
+    RewriteCond %{HTTPS} != On
+    RewriteRule ^(.*)$ public/$ 1 [L]
+    <IfModule mod_negotiation.c>
+    Options -MultiViews -Indexes
+</IfModule>
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-
     # Redirect Trailing Slashes If Not A Folder...
+
+    
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
